# libCoMI

./: README.md
CoMI/: CMakeLists.txt  LICENSE
CoMI/include/CoI/: centerofinertia-derivatives.hpp  centerofinertia-derivatives.hxx  centerofinertia.hpp  centerofinertia.hxx
CoMI/src/: Config.cmake.in
test/: CMakeLists.txt
test/model/: CMakeLists.txt  package.xml
test/model/launch/: robot_display.launch
test/model/urdf/: qskater_robot_gazebo.urdf  robot_series_two.gv  robot_series_two.urdf  robot_series_two.xacro  simple_model.xacro
test/src/: pinocchio_test.cpp
